--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>My Web App</h1>
 <p>My first paragraph.</p>
-<strong>another test</strong>
+<strong>another entry!</strong>
 
 </body>
 </html>
